--- a/focusverandering.html
+++ b/focusverandering.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Focusverandering en Filmtype Berekening</title>
+    <title>Focusverandering en Filmtype verandering </title>
     <script>
         // Functie om minuten en seconden naar totale seconden om te zetten
         function tijdNaarSeconden(minuten, seconden) {
