--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berekening D4, D5, D7</title>
+    <title>Berekening D4, D5, D7 + FFD verandering</title>
     <script>
         // Functie om minuten en seconden naar totale seconden om te zetten
         function tijdNaarSeconden(minuten, seconden) {
@@ -19,6 +19,11 @@
             const minuten = Math.floor(seconden / 60);
             const restSeconden = Math.floor(seconden % 60);
             return `${minuten}:${restSeconden < 10 ? '0' : ''}${restSeconden}`;
+        }
+
+        // Functie om de focusverandering te berekenen
+        function berekenFocusverandering(begintijd, nieuweFocus, oudeFocus) {
+            return begintijd * Math.pow(nieuweFocus / oudeFocus, 2);
         }
 
         // Functies om D5 en D7 te berekenen van D4
@@ -42,21 +47,30 @@
             return { d4, d5 };
         }
 
-        // Hoofdfunctie om te berekenen op basis van de keuze
+        // Hoofdfunctie om de berekening uit te voeren
         function bereken() {
-            const keuze = document.querySelector('input[name="keuze"]:checked').value;
             const minuten = parseInt(document.getElementById("minuten").value);
             const seconden = parseInt(document.getElementById("seconden").value);
+            const ffdVerandert = document.getElementById("ffdVerandert").checked;
+            const oudeFocus = parseFloat(document.getElementById("oudeFocus").value);
+            const nieuweFocus = parseFloat(document.getElementById("nieuweFocus").value);
+            const keuze = document.querySelector('input[name="keuze"]:checked').value;
 
-            // Controleer of de minuten en seconden geldig zijn
-            if (isNaN(minuten) || isNaN(seconden)) {
+            // Controleer of de tijd en focuswaarden geldig zijn
+            if (isNaN(minuten) || isNaN(seconden) || (ffdVerandert && (isNaN(oudeFocus) || isNaN(nieuweFocus)))) {
                 document.getElementById("resultaat").innerHTML = "Voer geldige waarden in.";
                 return;
             }
 
-            const tijdInSeconden = tijdNaarSeconden(minuten, seconden);
-            let resultaat;
+            // Zet tijd om naar totale seconden
+            let tijdInSeconden = tijdNaarSeconden(minuten, seconden);
 
+            // Als de Film Focus Afstand verandert, pas focusverandering toe
+            if (ffdVerandert) {
+                tijdInSeconden = berekenFocusverandering(tijdInSeconden, nieuweFocus, oudeFocus);
+            }
+
+            let resultaat;
             if (keuze === "D4") {
                 resultaat = berekenD5D7VanD4(tijdInSeconden);
                 document.getElementById("resultaat").innerHTML = 
@@ -74,8 +88,9 @@
     </script>
 </head>
 <body>
-    <h1 style="color: #F5DF4D; text-align: center;">Filmsoort verandering</h1>
-     <!-- De knop om het pop-up venster te openen -->
+    <h1 style="color: #F5DF4D; text-align: center;">Filmsoort (+FFD) Verandering</h1>
+
+    <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
 
     <!-- Het pop-up venster -->
@@ -83,15 +98,14 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('myModal')">&times;</span>
             <p>Voer de tijd in voor een filmsoort en krijg de tijd voor de andere filmsoorten. 
-                Maakt gebruik van deze factoren: D7 =1 D5 =1.666 D4 = 2.44</p>
+               Bij verandering van de Film Focus Afstand wordt ook de nieuwe tijd voor D4, D5, en D7 berekend.</p>
         </div>
     </div>
 
     <script src="script.js"></script> <!-- Link naar externe JavaScript -->
 
-
     <form>
-        <p>Welke variabele ken je?</p>
+        <p>Van welk filmtype ken je de tijd?</p>
         <input type="radio" id="D4" name="keuze" value="D4" checked>
         <label for="D4">D4</label><br>
         <input type="radio" id="D5" name="keuze" value="D5">
@@ -103,10 +117,33 @@
         Minuten: <input type="number" id="minuten" placeholder="Minuten" min="0"><br>
         Seconden: <input type="number" id="seconden" placeholder="Seconden" min="0" max="59"><br><br>
 
+        <!-- Optie om FFD aan te geven -->
+        <input type="checkbox" id="ffdVerandert">
+        <label for="ffdVerandert">Film Focus Afstand (FFD) verandert</label><br><br>
+
+        <div id="focusFields" style="display: none;">
+            <label for="oudeFocus">Oude Focus:</label>
+            <input type="number" id="oudeFocus" step="any" placeholder="Oude focus"><br><br>
+            <label for="nieuweFocus">Nieuwe Focus:</label>
+            <input type="number" id="nieuweFocus" step="any" placeholder="Nieuwe focus"><br><br>
+        </div>
+
         <button type="button" onclick="bereken()">Bereken</button>
     </form>
 
     <h2>Resultaat</h2>
     <p id="resultaat" style="color: #F5DF4D;"></p>
+
+    <script>
+        // Toon/verberg focusvelden wanneer FFD verandert wordt aangevinkt
+        document.getElementById('ffdVerandert').addEventListener('change', function() {
+            const focusFields = document.getElementById('focusFields');
+            if (this.checked) {
+                focusFields.style.display = 'block';
+            } else {
+                focusFields.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
