--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <li><a href="opnamesklasseb.html"><i class="fa-solid fa-star-of-life"></i>Aantal opnames EN<i class="fa-solid fa-star-of-life"></i></a></li>
         <li><a href="LW_Verdeler.html"><i class="fa-solid fa-tape"></i>Langsnaad Verdeler<i class="fa-solid fa-tape"></i></a></li>
         <li><a href="bundelbreedte.html"><i class="fa-solid fa-less-than"></i>Bundelgrootte<i class="fa-solid fa-less-than"></i></a></li>
+        <li><a href="timer.html"><i class="fa-solid fa-stopwatch"></i>Gamma Timers<i class="fa-solid fa-stopwatch"></i></a></li>
         <li><a href="afzettinggamma.html"><i class="fa-solid fa-road-barrier"></i>Afzetting Gamma<i class="fa-solid fa-road-barrier"></i></a></li>
     </ul>
 
