--- a/timer.html
+++ b/timer.html
@@ -38,17 +38,18 @@
 <h1 style="color: #F5DF4D; text-align: center;">Gamma Timers</h1>
 
 <!-- De knop om het pop-up venster te openen -->
-    <button class="info-btn" onclick="openModal('myModal')">i</button>
+<button class="info-btn" onclick="openModal('myModal')">i</button>
 
     <!-- Het pop-up venster -->
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('myModal')">&times;</span>
-            <p>Je kunt zelf timers een naam geven en opslaan(lokaal geheugen), Als je een andere keer hetzelfde wil doen maar dan met een andere bronsterkte kun je gebruik maken van de "tijd na Ci verandering" optie, deze zal je de nieuwe tijd geven met de aangepaste Ci waarde.
-            </p>
-        </div>
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal('myModal')">&times;</span>
+        <p>Je kunt zelf timers een naam geven en opslaan(lokaal geheugen), Als je een andere keer hetzelfde wil doen maar dan met een andere bronsterkte kun je gebruik maken van de "tijd na Ci verandering" optie, deze zal je de nieuwe tijd geven met de aangepaste Ci waarde.
+        </p>
     </div>
+</div>
 
+<script src="script.js"></script>    
 
 <div id="timers">
     <!-- Timer containers worden hier toegevoegd -->
