--- a/timer.html
+++ b/timer.html
@@ -12,10 +12,8 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            background-color: #f0f0f0;
         }
         h1 {
-            color: #F5DF4D;
             text-align: center;
             font-size: 1.8em;
             margin-top: 20px;
@@ -26,7 +24,6 @@
             margin: 0 auto;
         }
         .timer {
-            background: white;
             margin-bottom: 20px;
             padding: 15px;
             border-radius: 10px;
@@ -57,15 +54,11 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
-            background-color: #F5DF4D;
-            border: none;
             border-radius: 5px;
             font-size: 1em;
-            color: black;
         }
         #recalculate-section {
             margin-top: 30px;
-            background-color: white;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -80,7 +73,6 @@
             top: 20px;
         }
         .modal-content {
-            background-color: white;
             padding: 20px;
             border-radius: 10px;
         }
@@ -113,7 +105,7 @@
             <input type="number" id="new-activity" min="0" placeholder="Vul nieuwe activiteit in">
             <button onclick="recalculateTime()">Nieuwe Tijd</button>
         </div>
-        <p id="recalculate-result" style="text-align: center; color: #F5DF4D;"></p>
+        <p id="recalculate-result" style="text-align: center;"></p>
     </div>
 </div>
 
