--- a/timer.html
+++ b/timer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+    <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamma Timers</title>
@@ -11,70 +12,135 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
         }
+
         h1 {
+            color: #F5DF4D;
             text-align: center;
-            font-size: 1.8em;
-            margin-top: 20px;
+            font-size: 1.5em;
+            margin: 20px 0;
         }
-        .container {
-            padding: 10px;
-            max-width: 600px;
-            margin: 0 auto;
+
+        .info-btn, .home-icon {
+            position: absolute;
+            top: 10px;
+            font-size: 1.2em;
+            padding: 5px;
+            color: #333;
         }
+
+        .home-icon {
+            left: 10px;
+        }
+
+        .info-btn {
+            right: 10px;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            padding: 20px;
+            border-radius: 5px;
+            width: 90%;
+            max-width: 300px;
+        }
+
+        .close {
+            float: right;
+            font-size: 1.5em;
+            cursor: pointer;
+        }
+
         .timer {
             margin-bottom: 20px;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            border: 1px solid #ddd;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
-        .flashing {
-            animation: flash 0.3s infinite alternate;
-        }
-        @keyframes flash {
-            from { background-color: white; }
-            to { background-color: red; }
-        }
-        label {
-            display: block;
-            font-size: 1em;
+
+        .timer label {
+            flex: 1 1 100%;
             margin-bottom: 5px;
         }
-        input, select {
-            width: 100%;
-            padding: 8px;
+
+        .timer input, .timer select, .timer button {
+            flex: 1 1 calc(50% - 10px);
             margin-bottom: 10px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            font-size: 1em;
         }
+
         button {
-            display: block;
-            width: 100%;
             padding: 10px;
-            margin-bottom: 10px;
+            background-color: #333;
+            color: #fff;
+            border: none;
             border-radius: 5px;
+            cursor: pointer;
             font-size: 1em;
         }
+
+        button:hover {
+            background-color: #555;
+        }
+
+        #timers {
+            margin: 20px;
+        }
+
         #recalculate-section {
-            margin-top: 30px;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 20px;
         }
-        .info-btn {
-            font-size: 1.5em;
-            border: none;
-            background: none;
-            color: #888;
-            position: absolute;
-            right: 20px;
-            top: 20px;
+
+        #recalculate-result {
+            font-size: 1.2em;
+            color: #F5DF4D;
+            text-align: center;
+            margin-top: 10px;
         }
-        .modal-content {
-            padding: 20px;
-            border-radius: 10px;
+
+        #alarm-sound {
+            display: none;
+        }
+
+        /* Media query for mobile devices */
+        @media (max-width: 600px) {
+            .timer input, .timer select, .timer button {
+                flex: 1 1 100%;
+            }
+            button {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+
+            .modal-content {
+                width: 100%;
+                max-width: 280px;
+            }
+
+            .home-icon, .info-btn {
+                font-size: 1.5em;
+            }
+
+            h1 {
+                font-size: 1.2em;
+            }
         }
     </style>
 </head>
@@ -82,209 +148,42 @@
 
 <h1 style="color: #F5DF4D; text-align: center;">Gamma Timers</h1>
 
-<!-- De knop om het pop-up venster te openen -->
+<!-- Info button -->
 <button class="info-btn" onclick="openModal('myModal')">i</button>
 
-    <!-- Het pop-up venster -->
+<!-- Pop-up modal -->
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeModal('myModal')">&times;</span>
-        <p>Je kunt zelf timers een naam geven en opslaan(lokaal geheugen), Als je een andere keer hetzelfde wil doen maar dan met een andere bronsterkte kun je gebruik maken van de "tijd na Ci verandering" optie, deze zal je de nieuwe tijd geven met de aangepaste Ci waarde.
-        </p>
+        <p>Je kunt zelf timers een naam geven en opslaan (lokaal geheugen). Als je een andere keer dezelfde timer wil gebruiken maar met een andere bronsterkte, kun je de "Tijd na Ci verandering" optie gebruiken voor de nieuwe tijd met aangepaste Ci waarde.</p>
     </div>
 </div>
 
-<script src="script.js"></script>       
-    <!-- Timers Section -->
-    <div id="timers">
-        <!-- Timer containers worden hier toegevoegd -->
-    </div>
+<!-- Timer section -->
+<div id="timers">
+    <!-- Timer containers worden hier toegevoegd -->
+</div>
 
-    <button onclick="addTimer()">Voeg een nieuwe timer toe</button>
+<button onclick="addTimer()">Voeg een nieuwe timer toe</button>
 
-    <!-- Dropdown for saved timers -->
-    <div id="recalculate-section">
-        <h3>Tijd na Ci verandering</h3>
-        <label for="saved-timers">Selecteer een opgeslagen timer:</label>
-        <select id="saved-timers" onchange="showRecalculateSection()">
-            <option value="">Kies een timer</option>
-        </select>
-        <div id="new-activity-section" style="display:none;">
-            <label for="new-activity">Nieuwe activiteit in Ci:</label>
-            <input type="number" id="new-activity" min="0" placeholder="Vul nieuwe activiteit in">
-            <button onclick="recalculateTime()">Nieuwe Tijd</button>
-        </div>
-        <p id="recalculate-result" style="text-align: center;"></p>
+<!-- Dropdown menu for recalculation -->
+<div id="recalculate-section">
+    <h3>Tijd na Ci verandering</h3>
+    <label for="saved-timers">Selecteer een opgeslagen timer:</label>
+    <select id="saved-timers" onchange="showRecalculateSection()">
+        <option value="">Kies een timer</option>
+    </select>
+    <div id="new-activity-section" style="display:none;">
+        <label for="new-activity">Nieuwe activiteit in Ci:</label>
+        <input type="number" id="new-activity" min="0" placeholder="Vul nieuwe activiteit in">
+        <button onclick="recalculateTime()">Nieuwe Tijd</button>
     </div>
+    <p id="recalculate-result"></p>
 </div>
 
 <audio id="alarm-sound" src="alarm.wav" preload="auto"></audio>
 
-<script>
-    let timers = [];
-
-    function saveTimer(index) {
-        const timerName = document.getElementById(`timer-name-${index}`).value;
-        const timerMinutes = document.getElementById(`timer-minutes-${index}`).value;
-        const timerSeconds = document.getElementById(`timer-seconds-${index}`).value;
-        const isotope = document.getElementById(`isotope-${index}`).value;
-        const activity = document.getElementById(`activity-${index}`).value;
-
-        localStorage.setItem(`timer-${index}`, JSON.stringify({ 
-            name: timerName, 
-            minutes: timerMinutes, 
-            seconds: timerSeconds, 
-            isotope: isotope, 
-            activity: activity 
-        }));
-
-        alert(`Timer "${timerName}" opgeslagen!`);
-        document.getElementById(`delete-button-${index}`).style.display = 'inline';
-        updateSavedTimersDropdown();
-    }
-
-    function addTimer(timerData = null) {
-        const index = document.querySelectorAll('.timer').length;
-        const timerContainer = document.createElement('div');
-        timerContainer.className = 'timer';
-        timerContainer.id = `timer-container-${index}`;
-
-        timerContainer.innerHTML = `
-            <label for="timer-name-${index}">Naam:</label>
-            <input type="text" id="timer-name-${index}" placeholder="Timer naam" value="${timerData ? timerData.name : ''}">
-            <label for="timer-minutes-${index}">Minuten:</label>
-            <input type="number" id="timer-minutes-${index}" value="${timerData ? timerData.minutes : 0}" min="0">
-            <label for="timer-seconds-${index}">Seconden:</label>
-            <input type="number" id="timer-seconds-${index}" value="${timerData ? timerData.seconds : 0}" min="0" max="59">
-            <label for="isotope-${index}">Isotoop:</label>
-            <select id="isotope-${index}">
-                <option value="Se75" ${timerData && timerData.isotope === 'Se75' ? 'selected' : ''}>Se75</option>
-                <option value="Ir192" ${timerData && timerData.isotope === 'Ir192' ? 'selected' : ''}>Ir192</option>
-            </select>
-            <label for="activity-${index}">Activiteit (Ci):</label>
-            <input type="number" id="activity-${index}" placeholder="Activiteit in Ci" min="0" value="${timerData ? timerData.activity : ''}">
-            <button onclick="startTimer(${index})">Start</button>
-            <button onclick="stopTimer(${index})" id="stop-button-${index}" disabled>Stop/Reset</button>
-            <button onclick="saveTimer(${index})">Opslaan</button>
-            <button id="delete-button-${index}" style="display:${timerData ? 'inline' : 'none'};" onclick="deleteTimer(${index})">Verwijder</button>
-            <button onclick="muteTimer(${index})" id="mute-button-${index}" style="display:none;">Mute</button>
-            <p id="countdown-${index}"></p>
-        `;
-
-        document.getElementById('timers').appendChild(timerContainer);
-        timers[index] = { interval: null, timeRemaining: 0, originalMinutes: 0, originalSeconds: 0, originalActivity: 0, name: timerData ? timerData.name : '' };
-        
-        if (timerData) {
-            timers[index].originalMinutes = parseInt(timerData.minutes);
-            timers[index].originalSeconds = parseInt(timerData.seconds);
-            timers[index].originalActivity = parseFloat(timerData.activity);
-        }
-    }
-
-    function startTimer(index) {
-        const minutesInput = document.getElementById(`timer-minutes-${index}`).value;
-        const secondsInput = document.getElementById(`timer-seconds-${index}`).value;
-        const activityInput = document.getElementById(`activity-${index}`).value;
-
-        timers[index].timeRemaining = parseInt(minutesInput) * 60 + parseInt(secondsInput);
-        timers[index].originalMinutes = parseInt(minutesInput);
-        timers[index].originalSeconds = parseInt(secondsInput);
-        timers[index].originalActivity = parseFloat(activityInput);
-        const countdownDisplay = document.getElementById(`countdown-${index}`);
-        const stopButton = document.getElementById(`stop-button-${index}`);
-        const muteButton = document.getElementById(`mute-button-${index}`);
-        const timerContainer = document.getElementById(`timer-container-${index}`);
-
-        if (isNaN(timers[index].timeRemaining) || timers[index].timeRemaining <= 0 || isNaN(activityInput)) {
-            alert('Voer een geldige tijd en activiteit in.');
-            return;
-        }
-
-        stopButton.disabled = false;
-        muteButton.style.display = 'inline';
-        clearInterval(timers[index].interval);
-
-        timers[index].interval = setInterval(() => {
-            const minutes = Math.floor(timers[index].timeRemaining / 60);
-            const seconds = timers[index].timeRemaining % 60;
-            countdownDisplay.textContent = `Resterende tijd: ${minutes} minuten en ${seconds} seconden`;
-            timers[index].timeRemaining--;
-
-            if (timers[index].timeRemaining < 0) {
-                clearInterval(timers[index].interval);
-                countdownDisplay.textContent = 'Tijd verstreken!';
-                timerContainer.classList.add('flashing');
-                document.getElementById('alarm-sound').play();
-            }
-        }, 1000);
-    }
-
-    function stopTimer(index) {
-        clearInterval(timers[index].interval);
-        document.getElementById(`countdown-${index}`).textContent = '';
-        document.getElementById(`stop-button-${index}`).disabled = true;
-        document.getElementById(`mute-button-${index}`).style.display = 'none';
-        document.getElementById(`timer-container-${index}`).classList.remove('flashing');
-    }
-
-    function deleteTimer(index) {
-        const timerContainer = document.getElementById(`timer-container-${index}`);
-        timerContainer.remove();
-        localStorage.removeItem(`timer-${index}`);
-        updateSavedTimersDropdown();
-    }
-
-    function muteTimer(index) {
-        document.getElementById('alarm-sound').pause();
-        document.getElementById(`timer-container-${index}`).classList.remove('flashing');
-    }
-
-    function updateSavedTimersDropdown() {
-        const dropdown = document.getElementById('saved-timers');
-        dropdown.innerHTML = '<option value="">Kies een timer</option>';
-        for (let i = 0; i < localStorage.length; i++) {
-            const key = localStorage.key(i);
-            if (key.startsWith('timer-')) {
-                const timer = JSON.parse(localStorage.getItem(key));
-                dropdown.innerHTML += `<option value="${key}">${timer.name}</option>`;
-            }
-        }
-    }
-
-    function showRecalculateSection() {
-        const selectedTimerKey = document.getElementById('saved-timers').value;
-        if (selectedTimerKey) {
-            document.getElementById('new-activity-section').style.display = 'block';
-        } else {
-            document.getElementById('new-activity-section').style.display = 'none';
-        }
-    }
-
-    function recalculateTime() {
-        const selectedTimerKey = document.getElementById('saved-timers').value;
-        const newActivity = document.getElementById('new-activity').value;
-
-        if (!newActivity || isNaN(newActivity)) {
-            alert('Voer een geldige nieuwe activiteit in.');
-            return;
-        }
-
-        const savedTimer = JSON.parse(localStorage.getItem(selectedTimerKey));
-        const originalTime = savedTimer.minutes * 60 + savedTimer.seconds;
-        const originalActivity = savedTimer.activity;
-
-        const newTime = originalTime * (savedTimer.activity / newActivity);
-
-        const minutes = Math.floor(newTime / 60);
-        const seconds = Math.floor(newTime % 60);
-
-        document.getElementById('recalculate-result').textContent = `Nieuwe tijd: ${minutes} minuten en ${seconds} seconden`;
-    }
-
-    window.onload = function () {
-        updateSavedTimersDropdown();
-    }
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
