--- a/timer.html
+++ b/timer.html
@@ -151,7 +151,7 @@
 </head>
 <body>
 
-<h1>Gamma Timers</h1>
+<h1 style="color: #F5DF4D; text-align: center;">Gamma Timers</h1>
 
 <!-- De knop om het pop-up venster te openen -->
 <button class="info-btn" onclick="openModal('myModal')">i</button>
@@ -164,6 +164,8 @@
     </div>
 </div>
 
+<script src="script.js"></script>    
+    
 <div id="timers">
     <!-- Timer containers worden hier toegevoegd -->
 </div>
