--- a/timer.html
+++ b/timer.html
@@ -17,7 +17,7 @@
         h1 {
             color: #F5DF4D;
             text-align: center;
-            margin-top: 20px;
+            margin-top: 25px;
         }
 
         .timer {
@@ -65,6 +65,7 @@
             font-size: 1.2em;
             text-align: center;
             margin-top: 10px;
+            color: #F5DF4D;
         }
 
 
@@ -82,7 +83,7 @@
         .modal-content {
             padding: 20px;
             border-radius: 8px;
-            width: 80%;
+            width: 70%;
             max-width: 500px;
         }
 
