--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         <li><a href="LW_Verdeler.html"><i class="fa-solid fa-tape"></i>Langsnaad Verdeler<i class="fa-solid fa-tape"></i></a></li>
         <li><a href="bundelbreedte.html"><i class="fa-solid fa-less-than"></i>Bundelgrootte<i class="fa-solid fa-less-than"></i></a></li>
         <li><a href="afzettinggamma.html"><i class="fa-solid fa-road-barrier"></i>Afzetting Gamma<i class="fa-solid fa-road-barrier"></i></a></li>
+        <li><a href="handigelinks.html"><i class="fa-solid fa-link"></i>Handige links<i class="fa-solid fa-link"></i></a></li>
         <li><a href="timer.html"><i class="fa-solid fa-stopwatch"></i>Gamma Timers<i class="fa-solid fa-stopwatch"></i></a></li>
     </ul>
 
