--- a/verzet.html
+++ b/verzet.html
@@ -57,7 +57,7 @@
         <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="closeModal('myModal')">&times;</span>
-                <p>Deze tool kijkt of het is toegestaan om opstelling 11/F te gebruiken en zal het verzet bereken als het toegestaan is.
+                <p>Deze tool kijkt of het is toegestaan om opstelling 11/F te gebruiken en zal het verzet bereken als het toegestaan is. Gebruikt de formule zoals die in het RT-Zakboekje staat. Opmerkingen(uit het zakboekje): De FFD (film focus afstand) moet loodrecht op de las worden opgegeven en moet minstens 10x de Diameter zijn.
                 </p>
             </div>
         </div>
